[sprint/Falcon] (bug): date number cut off in wire (#417)
* (bug): date number cut off in wire

* removed debugging code

--- a/app/src/modules/boost/creator/creator.component.scss
+++ b/app/src/modules/boost/creator/creator.component.scss
@@ -598,6 +598,8 @@
   }
 
   select {
+    -webkit-appearance: none;
+    -moz-appearance: none;
     appearance: none;
     color: #ffffff;
     background: transparent;
