--- a/app/src/modules/wallet/wallet.component.scss
+++ b/app/src/modules/wallet/wallet.component.scss
@@ -75,7 +75,9 @@
     padding: 8px 16px;
     margin-right: 16px;
     font-size: 16px;
+    appearance: none;
     -webkit-appearance: none;
+    -moz-appearance: none;
     border: 1px solid #EEE;
     /* border-right: 1px solid #DDD; */
     background-color: #FAFAFA;
